@@ -210,7 +210,14 @@ public class SourceCompiler {
     private int exec(String... args) {
         ByteArrayOutputStream buff = new ByteArrayOutputStream();
         try {
-            Process p = Runtime.getRuntime().exec(args);
+            ProcessBuilder builder = new ProcessBuilder();
+            // The javac executable allows some of it's flags to be smuggled in via environment variables.
+            // But if it sees those flags, it will write out a message to stderr, which messes up our
+            // parsing of the output.
+            builder.environment().remove("JAVA_TOOL_OPTIONS");
+            builder.command(args);
+            
+            Process p = builder.start();
             copyInThread(p.getInputStream(), buff);
             copyInThread(p.getErrorStream(), buff);
             p.waitFor();
